Internal optimizations + benchmarks for validating